src/parser/CmmParser.java
// Generated from src/parser/Cmm.g4 by ANTLR 4.7
package parser;

import ast.Program;
import ast.definitions.*;
import ast.expressions.*;
import ast.statements.*;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.TerminalNode;
import types.*;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
			T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
			T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
			T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, WS = 38, COMMENT = 39,
			CHAR_CONSTANT = 40, INT_CONSTANT = 41, REAL_CONSTANT = 42, MAIN = 43, ID = 44;
	public static final int
			RULE_program = 0, RULE_definitions = 1, RULE_main = 2, RULE_variable_definition = 3,
			RULE_primative = 4, RULE_type = 5, RULE_function_block = 6, RULE_variable_definition_block = 7,
			RULE_block = 8, RULE_statement_block = 9, RULE_statement = 10, RULE_if_statement = 11,
			RULE_while_statement = 12, RULE_condition_block = 13, RULE_write_statement = 14,
			RULE_read_statement = 15, RULE_return_statement = 16, RULE_assignment_statement = 17,
			RULE_function_invocation = 18, RULE_argument_list = 19, RULE_expression = 20,
			RULE_function_definition = 21, RULE_parameter_list = 22, RULE_return_type = 23,
			RULE_type_definition = 24, RULE_typedef_definition = 25, RULE_struct_definition = 26,
			RULE_record_definition_block = 27, RULE_record_definition = 28;
	public static final String[] ruleNames = {
			"program", "definitions", "main", "variable_definition", "primative",
			"type", "function_block", "variable_definition_block", "block", "statement_block",
			"statement", "if_statement", "while_statement", "condition_block", "write_statement",
			"read_statement", "return_statement", "assignment_statement", "function_invocation",
			"argument_list", "expression", "function_definition", "parameter_list",
			"return_type", "type_definition", "typedef_definition", "struct_definition",
			"record_definition_block", "record_definition"
	};
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
			new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	private static final String[] _LITERAL_NAMES = {
			null, "'void'", "'('", "')'", "'{'", "'}'", "','", "';'", "'int'", "'double'",
			"'char'", "'['", "']'", "'type'", "'if'", "'else'", "'while'", "'write'",
			"'read'", "'return'", "'='", "'.'", "'-'", "'*'", "'/'", "'%'", "'+'",
			"'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", "'!'", "'typedef'",
			"'struct'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, "WS", "COMMENT", "CHAR_CONSTANT", "INT_CONSTANT", "REAL_CONSTANT",
			"MAIN", "ID"
	};
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
	}

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@Override
	public String getGrammarFileName() {
		return "Cmm.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(58);
				((ProgramContext) _localctx).d = definitions();
				((ProgramContext) _localctx).ast = new Program((((ProgramContext) _localctx).d != null ? (((ProgramContext) _localctx).d.start) : null).getLine(), (((ProgramContext) _localctx).d != null ? (((ProgramContext) _localctx).d.start) : null).getCharPositionInLine() + 1, ((ProgramContext) _localctx).d.ast);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							setState(73);
							_errHandler.sync(this);
							switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
								case 1: {
									setState(61);
									((DefinitionsContext) _localctx).type_definition = type_definition();
									_localctx.ast.addAll(((DefinitionsContext) _localctx).type_definition.ast);
								}
								break;
								case 2: {
									setState(64);
									((DefinitionsContext) _localctx).struct_definition = struct_definition();
									_localctx.ast.add(((DefinitionsContext) _localctx).struct_definition.ast);
								}
								break;
								case 3: {
									setState(67);
									((DefinitionsContext) _localctx).variable_definition = variable_definition();
									_localctx.ast.addAll(((DefinitionsContext) _localctx).variable_definition.ast);
								}
								break;
								case 4: {
									setState(70);
									((DefinitionsContext) _localctx).function_definition = function_definition();
									_localctx.ast.add(((DefinitionsContext) _localctx).function_definition.ast);
								}
								break;
							}
						}
					}
					setState(77);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
				}
				setState(78);
				((DefinitionsContext) _localctx).main = main();
				_localctx.ast.add(((DefinitionsContext) _localctx).main.ast);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(81);
				match(T__0);
				setState(82);
				((MainContext) _localctx).m = match(MAIN);
				setState(83);
				match(T__1);
				setState(84);
				match(T__2);
				setState(91);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
					case 1: {
						setState(85);
						match(T__3);
						setState(86);
						match(T__4);
						((MainContext) _localctx).ast = new FunctionDefinition(((MainContext) _localctx).m.getLine(), ((MainContext) _localctx).m.getCharPositionInLine() + 1, "main", VoidType.getInstance(), new ArrayList<Definition>(), new ArrayList<Statement>());
					}
					break;
					case 2: {
						setState(88);
						((MainContext) _localctx).fb = function_block();
						((MainContext) _localctx).ast = new FunctionDefinition(((MainContext) _localctx).m.getLine(), ((MainContext) _localctx).m.getCharPositionInLine() + 1, "main", VoidType.getInstance(), new ArrayList<Definition>(), ((MainContext) _localctx).fb.ast);
					}
					break;
			}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__12))) != 0)) {
					{
						setState(93);
						((Variable_definitionContext) _localctx).type = type(0);
						setState(94);
						((Variable_definitionContext) _localctx).id1 = match(ID);
						_localctx.ast.add(new VariableDefinition(((Variable_definitionContext) _localctx).id1.getLine(), ((Variable_definitionContext) _localctx).id1.getCharPositionInLine() + 1, (((Variable_definitionContext) _localctx).id1 != null ? ((Variable_definitionContext) _localctx).id1.getText() : null), ((Variable_definitionContext) _localctx).type.ast));
						setState(101);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == T__5) {
							{
								{
									setState(96);
									match(T__5);
									setState(97);
									((Variable_definitionContext) _localctx).id2 = match(ID);
									_localctx.ast.add(new VariableDefinition(((Variable_definitionContext) _localctx).id2.getLine(), ((Variable_definitionContext) _localctx).id2.getCharPositionInLine() + 1, (((Variable_definitionContext) _localctx).id2 != null ? ((Variable_definitionContext) _localctx).id2.getText() : null), ((Variable_definitionContext) _localctx).type.ast));
								}
							}
							setState(103);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
					}
				}

				setState(106);
				match(T__6);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final PrimativeContext primative() throws RecognitionException {
		PrimativeContext _localctx = new PrimativeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primative);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case T__7:
					enterOuterAlt(_localctx, 1);
				{
					setState(108);
					match(T__7);
					((PrimativeContext) _localctx).ast = IntType.getInstance();
				}
				break;
				case T__8:
					enterOuterAlt(_localctx, 2);
				{
					setState(110);
					match(T__8);
					((PrimativeContext) _localctx).ast = RealType.getInstance();
				}
				break;
				case T__9:
					enterOuterAlt(_localctx, 3);
				{
					setState(112);
					match(T__9);
					((PrimativeContext) _localctx).ast = CharType.getInstance();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(123);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case T__7:
					case T__8:
					case T__9: {
						setState(117);
						((TypeContext) _localctx).primative = primative();
						((TypeContext) _localctx).ast = ((TypeContext) _localctx).primative.ast;
					}
					break;
					case T__12: {
						setState(120);
						match(T__12);
						setState(121);
						((TypeContext) _localctx).id = match(ID);
						((TypeContext) _localctx).ast = new UserDefinedType(((TypeContext) _localctx).id.getLine(), ((TypeContext) _localctx).id.getCharPositionInLine() + 1, (((TypeContext) _localctx).id != null ? ((TypeContext) _localctx).id.getText() : null));
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
				_ctx.stop = _input.LT(-1);
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						if (_parseListeners != null) triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							{
								_localctx = new TypeContext(_parentctx, _parentState);
								_localctx.t = _prevctx;
								_localctx.t = _prevctx;
								pushNewRecursionContext(_localctx, _startState, RULE_type);
								setState(125);
								if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
								setState(130);
								_errHandler.sync(this);
								_alt = 1;
								do {
									switch (_alt) {
										case 1: {
											{
												setState(126);
												match(T__10);
												setState(127);
												((TypeContext) _localctx).c = match(INT_CONSTANT);
												setState(128);
												match(T__11);
												_localctx.indexes.add(LexerHelper.lexemeToInt((((TypeContext) _localctx).c != null ? ((TypeContext) _localctx).c.getText() : null)));
											}
										}
										break;
										default:
											throw new NoViableAltException(this);
									}
									setState(132);
									_errHandler.sync(this);
									_alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
								} while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
								((TypeContext) _localctx).ast = ArrayType.createArray(((TypeContext) _localctx).t.ast, _localctx.indexes);
							}
						}
					}
					setState(139);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public final Function_blockContext function_block() throws RecognitionException {
		Function_blockContext _localctx = new Function_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(140);
				match(T__3);
				setState(141);
				((Function_blockContext) _localctx).v = variable_definition_block();
				_localctx.ast.addAll(((Function_blockContext) _localctx).v.ast);
				setState(143);
				((Function_blockContext) _localctx).b = block();
				_localctx.ast.addAll(((Function_blockContext) _localctx).b.ast);
				setState(145);
				match(T__4);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final Variable_definition_blockContext variable_definition_block() throws RecognitionException {
		Variable_definition_blockContext _localctx = new Variable_definition_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variable_definition_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__12) | (1L << T__35) | (1L << T__36))) != 0)) {
					{
						setState(156);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case T__6:
							case T__7:
							case T__8:
							case T__9:
							case T__12: {
								setState(147);
								((Variable_definition_blockContext) _localctx).v = variable_definition();
								for (Definition d : ((Variable_definition_blockContext) _localctx).v.ast) {
									_localctx.ast.add((Statement) d);
								}
							}
							break;
							case T__35: {
								setState(150);
								((Variable_definition_blockContext) _localctx).td = type_definition();
								for (Definition d : ((Variable_definition_blockContext) _localctx).td.ast) {
									_localctx.ast.add((Statement) d);
								}
							}
							break;
							case T__36: {
								setState(153);
								((Variable_definition_blockContext) _localctx).sd = struct_definition();
								_localctx.ast.add(((Variable_definition_blockContext) _localctx).sd.ast);
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__21) | (1L << T__34) | (1L << CHAR_CONSTANT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << ID))) != 0)) {
					{
						{
							setState(161);
							((BlockContext) _localctx).s = statement();
							_localctx.ast.addAll(((BlockContext) _localctx).s.ast);
						}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final Statement_blockContext statement_block() throws RecognitionException {
		Statement_blockContext _localctx = new Statement_blockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement_block);
		try {
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case T__3:
					enterOuterAlt(_localctx, 1);
				{
					setState(169);
					match(T__3);
					setState(170);
					((Statement_blockContext) _localctx).b = block();
					setState(171);
					match(T__4);
					_localctx.ast.addAll(((Statement_blockContext) _localctx).b.ast);
				}
				break;
				case T__1:
				case T__13:
				case T__15:
				case T__16:
				case T__17:
				case T__18:
				case T__21:
				case T__34:
				case CHAR_CONSTANT:
				case INT_CONSTANT:
				case REAL_CONSTANT:
				case ID:
					enterOuterAlt(_localctx, 2);
				{
					setState(174);
					((Statement_blockContext) _localctx).s = statement();
					_localctx.ast.addAll(((Statement_blockContext) _localctx).s.ast);
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statement);
		try {
			setState(201);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 13, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(179);
					((StatementContext) _localctx).ws = write_statement();
					_localctx.ast.addAll(((StatementContext) _localctx).ws.ast);
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(182);
					((StatementContext) _localctx).rs = read_statement();
					_localctx.ast.addAll(((StatementContext) _localctx).rs.ast);
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(185);
					((StatementContext) _localctx).ifs = if_statement();
					_localctx.ast.addAll(((StatementContext) _localctx).ifs.ast);
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(188);
					((StatementContext) _localctx).whs = while_statement();
					_localctx.ast.add(((StatementContext) _localctx).whs.ast);
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(191);
					((StatementContext) _localctx).res = return_statement();
					_localctx.ast.add(((StatementContext) _localctx).res.ast);
				}
				break;
				case 6:
					enterOuterAlt(_localctx, 6);
				{
					setState(194);
					((StatementContext) _localctx).as = assignment_statement();
					_localctx.ast.add(((StatementContext) _localctx).as.ast);
				}
				break;
				case 7:
					enterOuterAlt(_localctx, 7);
				{
					setState(197);
					((StatementContext) _localctx).fi = function_invocation();
					setState(198);
					match(T__6);
					_localctx.ast.add((Statement) ((StatementContext) _localctx).fi.ast);
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}
